--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/react-router-dom": "^5.3.3",
+    "@vis.gl/react-google-maps": "^1.2.0",
     "app-turismo-web": "file:",
     "axios": "^1.7.7",
     "browser-image-compression": "^2.0.2",
